--- a/css/hover.css
+++ b/css/hover.css
@@ -1,16 +1,18 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
-* {
+/* @import url("https://fonts.googleapis.com/css?family=Roboto+Mono"); */
+
+/* * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-weight: normal;
-}
+  box-sizing: border-box;
+  font-weight: normal;  
+} */
 
 .body2 {
   color: #555;
-  background: #222;
+  
+  /* background: rgb(255, 255, 255); */
   text-align: center;
   font-family: "Roboto Mono";
-  padding: 1em;
+  /* padding: 1em; */
 }
 
 h1 {
@@ -25,9 +27,9 @@ h1 {
 .flip .back {
   display: block;
   -webkit-transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-          transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
+  transition-duration: 0.5s;
   -webkit-transition-property: opacity, -webkit-transform;
   transition-property: opacity, -webkit-transform;
   transition-property: transform, opacity;
@@ -36,7 +38,7 @@ h1 {
 
 .flip .front {
   -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
+  transform: rotateY(0deg);
 }
 
 .flip .back {
@@ -47,33 +49,18 @@ h1 {
   width: 100%;
   height: 100%;
   -webkit-transform: rotateY(-180deg);
-          transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
 
 .flip:hover .front {
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip:hover .back {
   opacity: 1;
   -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
-}
-
-.flip.flip-vertical .back {
-  -webkit-transform: rotateX(-180deg);
-          transform: rotateX(-180deg);
-}
-
-.flip.flip-vertical:hover .front {
-  -webkit-transform: rotateX(180deg);
-          transform: rotateX(180deg);
-}
-
-.flip.flip-vertical:hover .back {
-  -webkit-transform: rotateX(0deg);
-          transform: rotateX(0deg);
+  transform: rotateY(0deg);
 }
 
 .flip {
@@ -81,7 +68,8 @@ h1 {
   display: inline-block;
   margin-right: 2px;
   margin-bottom: 1em;
-  width: 400px;
+  width: 300px;
+  height: 200px;
 }
 
 .flip .front,
@@ -91,7 +79,7 @@ h1 {
   width: inherit;
   background-size: cover !important;
   background-position: center !important;
-  height: 220px;
+  height: 120px;
   padding: 1em 2em;
   background: #313131;
   border-radius: 10px;
@@ -99,12 +87,16 @@ h1 {
 
 .flip .front p,
 .flip .back p {
-  font-size: 0.9125rem;
+  font-size: 15px;
   line-height: 160%;
   color: #999;
 }
 
+
+
 .text-shadow {
+  font-size: 20px;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04), 7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04), 13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04), 19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
 }
+
 /*# sourceMappingURL=hover.css.map */
