--- a/css/color/violet.css
+++ b/css/color/violet.css
@@ -9,12 +9,12 @@ VERSION : 1.1
 
 .themecolor
 {
-    color:#c304ec;/*Defines the theme color*/
+    color:red;/*Defines the theme color*/
 }
 
 .theme_background_color,#downloadbt:hover
 {
-    background-color:#c304ec; /*Defines the theme bakcground color*/
+    background-color:red; /*Defines the theme bakcground color*/
 }
 
 .borderColor
@@ -24,20 +24,20 @@ VERSION : 1.1
 
 .nim-menu.navbar-default .navbar-nav > li > a:hover
  {
-color:#c304ec;
+color:red;
 }
 .social li a:hover
 {
-    color:#c304ec;
+    color:red;
 }
 .sub-footer
 {
-    border-top-color:#c304ec;
+    border-top-color:red;
 }
 
 .work-desc
 {
-    background:#c304ec;
+    background:red;
 }
 .work-desc h3
 {
@@ -47,7 +47,7 @@ color:#c304ec;
 
 .footer
 {
-    border-top-color:#c304ec;
+    border-top-color:red;
 }
 .black
 {
@@ -79,7 +79,7 @@ color:#c304ec;
 
 .sectionTitle hr
 {
-  border-color:#c304ec; 
+  border-color:red; 
 }
 
 .sectionTitle .line{
@@ -91,25 +91,25 @@ color:#c304ec;
     border-color:#dbdbdb;
 }
 
-ol.type li a:hover{ color:#c304ec;}
+ol.type li a:hover{ color:red;}
 
 .ramsh-menu.navbar-default .navbar-nav > li > a:hover,a.fa.fa-angle-down:hover,.navbar-default .navbar-nav > .active > a,.navbar-default .navbar-nav > .active > a:hover, 
 .navbar-default .navbar-nav > .active > a:focus
 {
-    color:#c304ec;
+    color:red;
 }
 
 .navbar-toggle
 {
  
- color:#c304ec;
+ color:red;
 }
 
 .owl-theme .owl-controls .owl-page.active span, 
 .owl-theme .owl-controls.clickable .owl-page:hover span,#contactbtn:hover {
 	
-	background:#c304ec;
+	background:red;
 }
 .owl-theme .owl-controls .owl-page.active span{
-	background:#c304ec;
+	background:red;
 }
