--- a/css/form.css
+++ b/css/form.css
@@ -93,7 +93,7 @@ textarea {
     padding: 7px 35px;
     border-radius: 60px;
     display: inline-block;
-    background-color: #4b8cfb;
+    background-color: red;
     color: white;
     font-size: 18px;
     cursor: pointer;
