--- a/css/hover.css
+++ b/css/hover.css
@@ -11,7 +11,7 @@
   
   /* background: rgb(255, 255, 255); */
   text-align: center;
-  font-family: "Roboto Mono";
+  /* font-family: "Roboto Mono"; */
   /* padding: 1em; */
 }
 
